Closed Bug 427779 Opened 18 years ago Closed 17 years ago

[FIX]XHTML parser error due to <base href="." />

Categories

(Core :: XML, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9.1

People

(Reporter: rom, Assigned: bzbarsky)

References

()

Details

(Keywords: regression, testcase, verified1.9.0.4)

Attachments

(3 files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; fr-FR; rv:1.9b5) Gecko/2008040514 Firefox/3.0b5 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; fr-FR; rv:1.9b5) Gecko/2008040514 Firefox/3.0b5 I uploaded an xhtml file generated with openoffice 2.4 to a webserver : http://myfreetv.free.fr/dev/flex-air.xhtml But firefox says : cf (see the "Actual Results" section below) To know if the problem is from firefox beta or openoffice, I tested the w3validator : http://validator.w3.org/check?uri=http%3A%2F%2Fmyfreetv.free.fr%2Fdev%2Fflex-air.xhtml&charset=(detect+automatically)&doctype=Inline&group=0 This Page Is Valid XHTML 1.0 Strict! Reproducible: Always Steps to Reproduce: 1. Go to http://myfreetv.free.fr/dev/flex-air.xhtml 2. See the source 3. Correct the bug ;) Good luck Actual Results: XML Parsing Error: Location: http://myfreetv.free.fr/dev/flex-air.xhtml Line Number 2, Column 433:<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="content-type" content="text/html; charset=utf-8" /><title> </title><meta name="generator" content="StarOffice/OpenOffice.org XSLT (http://xml.openoffice.org/sx2ml)" /><meta name="author" content="®om" /><meta name="created" content="2008-04-08T09:54:17" /><meta name="changedby" content="®om" /><meta name="changed" content="2008-04-08T16:34:58" /><base href="." /><style type="text/css"> ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------^ Expected Results: The page without parsing error
Attached file reduced testcase
Keywords: testcase
Summary: XHTML parser error → XHTML parser error due to <base href="." />
This bug appeared between the 2007-11-18 nightly and the 2007-11-19 nightly.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Could this be a regression from bug 401613?
Component: General → XML
Product: Firefox → Core
QA Contact: general → xml
Version: unspecified → Trunk
Any news?
No important for final release?
Same under Windows. OS should be changed accordingly. This is pretty annoying on some real pages like http://api.openoffice.org/docs/DevelopersGuide/DevelopersGuide.xhtml
Flags: wanted1.9.1?
Flags: blocking1.9.1?
OS: Linux → All
Hardware: PC → All
Jonas wants this.
Flags: wanted1.9.1?
Flags: blocking1.9.1?
Flags: blocking1.9.1+
Priority: -- → P3
Target Milestone: --- → mozilla1.9.1
Assignee: nobody → jonas
Flags: wanted1.9.1+
Flags: blocking1.9.1-
Flags: blocking1.9.1+
Priority: P3 → P1
Assignee: jonas → bzbarsky
Status: NEW → ASSIGNED
Attachment #342449 - Flags: superreview?(jonas)
Attachment #342449 - Flags: review?(jonas)
Summary: XHTML parser error due to <base href="." /> → [FIX]XHTML parser error due to <base href="." />
I should note, by the way, that the page is buggy: in HTML the href of a <base> is an absolute URI, and "." is not much of an absolute URI.
Attachment #342449 - Flags: superreview?(jonas)
Attachment #342449 - Flags: superreview+
Attachment #342449 - Flags: review?(jonas)
Attachment #342449 - Flags: review+
in any case this is not excuse to not show "buggy" page at all - i am already wrote about this problem to XML co-lead at OpenOffice.org and maybe base href="." will be removed soon from OO filters should note that we often see page declared as XHTML but even not belong to xml at all - what difference in this case? yep - it`s well-formed XML, but it can still contain some errors - i can bet that most of them are recoverable (: and in most cases just ignorable :)
> in any case this is not excuse to not show "buggy" page at all Who said it was?
Pushed changeset 94ee77d90fef and changeset 24041e258651 for the test.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Attached patch 1.9 branch patchSplinter Review
Should probably fix this on branch too. This is a very safe change.
Attachment #342603 - Flags: approval1.9.0.4?
Comment on attachment 342603 [details] [diff] [review] 1.9 branch patch Approved for 1.9.0.4, a=dveditz for release-drivers Icky diff, please use the -up options.
Attachment #342603 - Flags: approval1.9.0.4? → approval1.9.0.4+
Oops. I haven't gotten the CVS trees all happy here yet... ;)
Fixed on 1.9 branch.
Keywords: fixed1.9.0.4
Page http://api.openoffice.org/docs/DevelopersGuide/DevelopersGuide.xhtml verified working in Mozilla/5.0 (X11; U; Linux i686; fr; rv:1.9.0.4pre) Gecko/2008101804 GranParadiso/3.0.4pre
Verified for 1.9.0.4 with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.0.4pre) Gecko/2008102404 GranParadiso/3.0.4pre and by Xavier above.
Verified for Trunk with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b2pre) Gecko/20081024 Minefield/3.1b2pre.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: