Bug 427779. Make the XML parser not bail out on invalid URI in <xhtml:base>. r+sr=sicking, a=dveditz