content/xml/document/src/nsXMLContentSink.h
@@ -150,7 +150,7 @@ protected:
   void PopContent();
   PRBool HaveNotifiedForCurrentContent() const;
 
-  nsresult ProcessBASETag(nsIContent* aContent);
+  void ProcessBASETag(nsIContent* aContent);
 
   nsresult FlushTags();
 
